fixed contrast

--- a/final-website-project/styles/small.css
+++ b/final-website-project/styles/small.css
@@ -893,10 +893,10 @@ form label.top input, form label.top select, textarea {
   border: solid 1px #999;
   border-radius: 4px;
   padding: .75rem;
-  color: gray;
+  color: var(--paragraph-background-color);
   width: 100%;
   max-width: 30rem;
-  background-color: #FFFFFF;
+  background-color: rgba(02, 30, 47, 0.8);
   justify-content: center;
   align-items: center;
 }
